[package]
name = "devzat-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.7.2"
prost = "0.10"
tower = "0.4.12"
tokio = { version = "1.19", features = ["macros", "rt-multi-thread"] }
futures-util = "0.3.21"

[build-dependencies]
tonic-build = "0.7.2"