[package]
name = "devzat-rs"
version = "0.1.1"
edition = "2021"
license = "GPL-3.0"
description = "Rust interface to the devzat gRCP plugin system."
documentation = "https://docs.rs/devzat-rs"
repository = "https://github.com/TommyPujol06/devzat-rs/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.7.2"
prost = "0.10.4"
futures-util = "0.3.21"

[build-dependencies]
tonic-build = "0.7.2"